# HomeTask1

./: CMakeLists.txt  README.md  main.cpp  test_version.cpp  version_lib.cpp
.github/workflows/: release.yml
